# kick_client

./: Cargo.toml  README.md  chat_messages.db
src/: lib.rs  main.rs
src/events/: chat_events.rs  mod.rs
