[package]
name = "kick_chatbot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24.0", features = ["connect", "native-tls"] }
reqwest = { version = "0.12.9", features = ["json", "blocking", "native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.32.1", features = ["bundled"] }
futures-util = "0.3"