[package]
name = "kick_client"
version = "0.1.0"
authors = ["xYamii yamii13371@gmail.com"]
edition = "2021"
license = "MIT"
description = "A WebSocket client for interacting with Kick chatrooms."
homepage = "https://github.com/xyamii/kick_client"
repository = "https://github.com/xyamii/kick_client"
documentation = "https://docs.rs/kick_client"
readme = "README.md"
keywords = ["kick", "websocket", "client", "chat"]
categories = ["network-programming", "web-programming"]

[dependencies]
tokio = { version = "1", features = ["net"] }
tokio-tungstenite = { version = "0.26.1", features = ["connect", "native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"

[lib]
name = "kick_client"
crate-type = ["lib"] 

[features]
tokio-handling = []